# schedule-service

./: README.md  pyproject.toml
builds/: compose.yml
src/: main.py
src/auth/application/decorators/: decorator.py
src/auth/application/use_cases/: google_auth_service.py
src/auth/domain/user/: model.py  schema.py
src/auth/infra/external_apis/google/: google_oauth.py
src/auth/infra/repository/rdb_repository/: user_repository.py
src/auth/presentation/rest/: api.py
src/shared/infra/repository/rdb_repository/: configs.py  rdb_repo.py
